--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@ body {
 }
 
 header p{
-  color: rgb(255, 255, 255);
+  color: white;
   line-height: 65px;
   display: inline;
   position: relative;
